Squash 0.8.0
============

 * Preliminary support for Apple OS X
 * File API is now thread safe, with *_unlocked variants
 * New 'splice' interface for plugins
 * Enable zling plugin
 * Disable csc and pithy plugins
 * Add nonnull and sentinel attributes
 * Add support for multiple levels in lzf
 * Add heatshrink plugin
 * Updated many plugins
 * Assorted bug fixes and enhancements

Squash 0.7.0
============

 * Provide an error message during configuration when using a bad
   tarball (such as those automatically generated by GitHub).
 * Rewrite brotli plugin to avoid threads
 * Add new file I/O API
 * Replace old file-to-file functions with a new splice API
 * Enable wfLZ
 * Add zlib-ng plugin
 * Add brieflz plugin
 * Updated many plugins
 * Assorted bug fixes and enhancements

Squash 0.6.0
============

 * New plugins:
   * yalz77
   * copy
   * csc
   * ncompress
 * Disabled Doboz
 * Create in-tree copies of all modules
 * Use conformant array parameters for buffers
 * New API for option parsing and introspection
 * Updated many plugins
 * Assorted bug fixes and enhancements

Squash 0.5.0
============

 * Initial release.