@@ -1,0 +1,22 @@
+# libdeflate Plugin #
+
+libdeflate is a library for fast, whole-buffer DEFLATE-based compression and decompression.
+
+For more information about libdeflate, see https://github.com/ebiggers/libdeflate
+
+## Codecs ##
+
+- **deflate** — Raw DEFLATE data.
+
+## Options ##
+
+### Compression Only ###
+
+- **level** (integer, 1 - 12), default 6 — Compression level.  Higher
+  values compress the data more but require more processing time.
+
+## License ##
+
+The libdeflate plugin is licensed under the [MIT
+License](http://opensource.org/licenses/MIT) license, and libdeflate is
+public domain.
