@@ -1,0 +1,3 @@
+license=Public Domain
+
+[deflate]
