@@ -8,7 +8,9 @@ Squash 0.8.0
  * Disable csc and pithy plugins
  * Add nonnull and sentinel attributes
  * Add support for multiple levels in lzf
- * Add heatshrink plugin
+ * New plugins:
+   * heatshrink
+   * libdeflate
  * Updated many plugins
  * Assorted bug fixes and enhancements
 
